disunity-derive/tests/07-missing-variant-discriminant.stderr
error: variant without a #[disunity(discriminant = N)] attribute
  --> tests/07-missing-variant-discriminant.rs:11:5
   |
11 |     Transform,
   |     ^^^^^^^^^
